--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,9 @@
 [tox]
-envlist = py36, py37, py38, flake8
+envlist = py38, flake8
 
 [travis]
 python =
     3.8: py38
-    3.7: py37
-    3.6: py36
 
 [testenv:flake8]
 basepython = python
@@ -13,14 +11,7 @@ deps = flake8
 commands = flake8 whetstone
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
+deps = pipenv
 commands =
-    pip install -U pip
-    pytest --basetemp={envtmpdir}
-
+    pipenv install --dev
+    py.test --basetemp={envtmpdir}
